fix: guesses container not showing properly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,7 +115,7 @@
   }
 
   .guesses-container {
-    height: 100%;
+    flex: 1;
   }
 
   .input-container {
